--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -43,6 +43,15 @@
       <div class="w3-col m3">
         <input class="w3-input w3-border" type="text" placeholder="CUSTOMER EMAIL" name="custemail"[(ngModel)]="custemail">
       </div>
+      <br><br>
+      <div class="w3-col m3">
+          <label>ROOM TYPE</label>
+          <select class="w3-input w3-border" name="Room"[(ngModel)]="Room">
+          <option value="Single">Single</option>
+          <option value="Double">Double</option>
+          <option value="Deluxe">Deluxe</option>
+        </select>    
+      </div>
     </div>
   </div>
   <br><br>
