--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -45,8 +45,8 @@
     <td>{{k}}</td>
   </tr>
   <tr>
-    <td>Total Price (Rands):</td>
-    <td>{{sprice}}</td>
+    <td>Room Type:</td>
+    <td>{{Rum}}</td>
   </tr>
 </table>
 <br><br>
